tests/core/ill-typed/unexpected-lambda/bad-if-4.stella
language core;

fn main(x : Nat) -> Nat {
    return (if false then true else fn(x : Nat) { return x; })(0);
}
